# SDSC_RAG

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  scope.md
app/: dashboard.py
data/documents/: manifest.json
scripts/: setup_data.py
src/geokg/: __init__.py  boundaries.py  config.py  documents.py  graph.py  heat.py  index.py  rag.py  retrieval.py  viz.py
