[project]
name = "geokg"
version = "0.1.0"
description = "Geospatial RAG + knowledge graph slice for Swiss urban heat"
requires-python = ">=3.11"

dependencies = [
    # Geospatial: read/reproject boundaries and clip raster tiles.
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    # STAC access to Landsat surface temperature on Planetary Computer.
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    # Knowledge graph: embedded RDF store with SPARQL.
    "pyoxigraph>=0.4",
    # Retrieval: local vector store + CPU embeddings (no GPU/torch).
    "qdrant-client>=1.9",
    "fastembed>=0.3",
    # Answer generation over an OpenAI-compatible endpoint (OpenRouter).
    "pydantic-ai-slim[openai]>=0.0.14",
    # Dashboard.
    "streamlit>=1.36",
    "folium>=0.16",
    "streamlit-folium>=0.21",
    "requests>=2.31",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geokg"]
